--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,7 @@ services:
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@dw_postgres/warehouse
     volumes:
       - ./dags:/opt/airflow/dags
+      - ./data:/opt/airflow/data
     depends_on:
       - airflow-init
 
