--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,9 +29,11 @@ services:
           --email admin@example.com
     environment:
       AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/warehouse
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@dw_postgres/warehouse
+      AIRFLOW__WEBSERVER__SECRET_KEY: super_secret_key_fija
     volumes:
       - ./dags:/opt/airflow/dags
+      - ./logs:/opt/airflow/logs
     depends_on:
       - postgres
 
@@ -39,14 +41,19 @@ services:
     image: apache/airflow:2.9.3
     command: webserver
     ports:
-      - "8080:8080"
+    - "8080:8080"
     environment:
       AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@dw_postgres/warehouse
+      AIRFLOW__WEBSERVER__SECRET_KEY: super_secret_key_fija
+      AIRFLOW__LOGGING__REMOTE_LOGGING: 'False'
+      AIRFLOW__LOGGING__BASE_LOG_FOLDER: /opt/airflow/logs
+
     volumes:
       - ./dags:/opt/airflow/dags
       - ./data:/opt/airflow/data
       - ./sql:/opt/airflow/sql
+      - ./logs:/opt/airflow/logs
     depends_on:
       - airflow-init
 
@@ -55,10 +62,15 @@ services:
     command: scheduler
     environment:
       AIRFLOW__CORE__LOAD_EXAMPLES: 'False'
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/warehouse
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@dw_postgres/warehouse
+      AIRFLOW__WEBSERVER__SECRET_KEY: super_secret_key_fija
+      AIRFLOW__LOGGING__REMOTE_LOGGING: 'False'
+      AIRFLOW__LOGGING__BASE_LOG_FOLDER: /opt/airflow/logs
+
     volumes:
       - ./dags:/opt/airflow/dags
       - ./data:/opt/airflow/data
       - ./sql:/opt/airflow/sql
+      - ./logs:/opt/airflow/logs
     depends_on:
       - airflow-webserver
